fix: bug search bar overlap with user detail container

--- a/app/assets/stylesheets/navbar.scss
+++ b/app/assets/stylesheets/navbar.scss
@@ -107,8 +107,8 @@
   display: none;
   margin-top: 0;
   padding: 20px;
-  position: fixed;
-  top: 96px;
+  position: relative;
+  top: 0;
   width: 100%;
   z-index: 90;
 }
